# bunker-miner

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  DEPENDENCIES.md  LICENSE  README.md  SUPPORTED_MINERS.md  buf.gen.yaml  buf.yaml  docker-compose.yml
.github/: SECURITY.md  dependabot.yml
.github/workflows/: ci-coordinator.yml  client-ci.yml  daemon-ci.yml  security-scan.yml
client/: CMakeLists.txt
client/src/: DaemonGrpcClient.cpp  DaemonGrpcClient.h  DeviceTelemetryWidget.cpp  DeviceTelemetryWidget.h  MainWindow.cpp  MainWindow.h  TelemetryWorker.cpp  TelemetryWorker.h  main.cpp
client/ui/: MainWindow.ui
daemon/: Cargo.toml  Dockerfile  build.rs
daemon/src/: benchmarking.rs  checksum.rs  config.rs  fleet_agent.rs  grpc.rs  hardware.rs  lib.rs  main.rs  miner_installer.rs  miner_manifest.rs  miners.rs  overclocking.rs  power_tuning.rs  profiles.rs  profit_engine.rs  telemetry.rs  web_dashboard.rs
daemon/tests/: profit_switching_integration_test.rs
daemon/web/: dashboard.html
development-plan/Phase0/: Phase0Task0.md  Phase0Task1.md  Phase0Task2.md  Phase0Task3.md  Phase0Task4.md  Phase0Task5.md
development-plan/Phase1/: Phase1Task0.md  Phase1Task1.md  Phase1Task2.md  Phase1Task3.md  Phase1Task4.md
development-plan/Phase2/: Phase2Task0.md  Phase2Task1.md  Phase2Task2.md  Phase2Task3.md  Phase2Task4.md
development-plan/Phase3/: Phase3Task0.md  Phase3Task1.md  Phase3Task2.md  Phase3Task3.md  Phase3Task4.md
development-plan/Phase4/: Phase4Task0.md  Phase4Task1.md  Phase4Task2.md  Phase4Task3.md  Phase4Task4.md
development-plan/Phase5/: Phase5Task0.md  Phase5Task1.md  Phase5Task2.md  Phase5Task3.md  Phase5Task4.md
docs/: BUILD_BASELINE.md  BUNKER_POOL_ARCHITECTURE.md  CODEBASE_MENTAL_MODEL.md  DEPENDENCIES.md  DEVELOPMENT_ENVIRONMENT.md  INCIDENT_RESPONSE_PLAN_DRAFT.md  PRODUCT_GRADE_100_PERCENT_SPEC.md  PRODUCT_IMPLEMENTATION_TRACKER.md  PRODUCT_SPEC.md  PROJECT_GOVERNANCE_AND_WORKFLOWS.md  Phase4_Deliverable_Final.md  SUPPORTED_MINERS.md  TESTING_STRATEGY.md  phase1_closure_review.md  phase1_deliverable.md
docs/ADRs/: ADR-001-Hardware-Detection-Libraries.md  ADR-002-Client-Daemon-IPC-Architecture.md  ADR-003-Secure-Configuration-Storage.md  ADR-004-Daemon-API-Security-Design.md  ADR-005-Fleet-Management-Architecture.md  ADR-006-Adaptive-Overclocking-Engine-Design.md
docs/progress_logs/: Phase0_Task2_PoC_Report.md  progress_phase_0.md  progress_phase_1.md  progress_phase_2.md  progress_phase_3.md  progress_phase_4.md  progress_phase_5.md
docs/specs/: BUNKER_P2POOL_MODE.md  LOCAL_MINER_MVP.md
fleet/: Cargo.toml  Dockerfile  README.md  deploy.sh
fleet/k8s/: configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  postgres.yaml  redis.yaml  secret.yaml  service.yaml
fleet/migrations/: 001_initial_schema.sql
fleet/src/: auth.rs  config.rs  database.rs  error.rs  main.rs  models.rs  websocket.rs
fleet/src/handlers/: api.rs  auth.rs  fleet.rs  mod.rs
fleet/static/: dashboard.html
infra/kubernetes/: 01-namespace.yaml  02-network-policies.yaml  03-security-policies.yaml  04-pool-api-deployment.yaml
infra/kubernetes/network-policies/: default-deny.yaml  kube-system-policies.yaml
infra/scripts/: validate-deployment.sh
infra/stubs/coin-daemon-stub/: Cargo.toml  Dockerfile
infra/stubs/coin-daemon-stub/src/: main.rs
infra/stubs/fleet-controller-stub/: Cargo.toml  Dockerfile
infra/stubs/fleet-controller-stub/src/: main.rs
infra/stubs/pool-api-stub/: Cargo.toml  Dockerfile
infra/stubs/pool-api-stub/src/: main.rs
infra/terraform/: eks.tf  elasticache.tf  main.tf  outputs.tf  rds.tf  variables.tf
infra/terraform/production/: databases.tf  eks.tf  iam.tf  loadbalancing.tf  main.tf  outputs.tf  user_data.sh  variables.tf
infra/terraform/staging/: main.tf  variables.tf
infra/terraform/templates/: node_userdata.sh.tpl
libs/common-rust/: Cargo.toml
libs/common-rust/src/: lib.rs
pool/: Cargo.toml  Dockerfile  bunker-pool.example.toml
pool/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  namespace.yaml  rbac.yaml  secret.yaml  service.yaml
pool/scripts/: deploy.sh  run_load_test.sh
pool/src/: config.rs  lib.rs  main.rs  metrics.rs
pool/src/share_processor/: mod.rs  processor.rs  storage.rs  validator.rs
pool/src/stratum/: connection.rs  job_manager.rs  mod.rs  protocol.rs  server.rs
pool/tests/: load_test.rs
protos/: daemon_api.v1.proto
scripts/: generate_api_docs.sh  init-db.sql  integration_test.md  integration_test_results.md  validate-xmrig-local-miner.ps1
tests/: integration_test_phase4.rs  integration_test_results.md  mock_api_server.py
tools/: check-dependencies.sh  check-secrets.sh  check-todos.sh  setup-pre-commit.sh
tools/bunker-miner-cli/: Cargo.toml  build.rs
tools/bunker-miner-cli/src/: main.rs
tools/poc/: Cargo.toml  build.rs
tools/poc/proto/: daemon.proto
tools/poc/src/: grpc_server.rs  hardware_detection.rs  lib.rs  process_management.rs  secure_storage.rs  stratum_server.rs
