[workspace]
resolver = "2"
members = [
    "daemon",
    "libs/common-rust",
    "infra/stubs/coin-daemon-stub",
    "infra/stubs/fleet-controller-stub",
    "infra/stubs/pool-api-stub",
]
exclude = [
    # Product crates remain outside the enforced workspace until their active
    # placeholder paths and compile blockers are resolved.
    "fleet",
    "pool",
    # Developer tools are quarantined until their generated protobuf API usage
    # is brought back in sync with protos/daemon_api.v1.proto.
    "tools/bunker-miner-cli",
    "tools/poc",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/emiliancristea/bunker-miner"
