[workspace]
resolver = "2"
members = [
    "daemon",
    "libs/common-rust",
    "infra/stubs/coin-daemon-stub",
    "infra/stubs/fleet-controller-stub",
    "infra/stubs/pool-api-stub",
    "tools/bunker-miner-cli",
]
exclude = [
    # Product crates remain outside the enforced workspace until their active
    # placeholder paths and compile blockers are resolved.
    "fleet",
    "pool",
    "tools/poc",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/emiliancristea/bunker-miner"
