[package]
name = "bunker-miner-daemon"
version = "0.1.0"
edition = "2021"
authors = ["Emilian Cristea <emilian@bunkercorpo.com>"]
description = "BUNKER MINER - Core mining daemon with hardware management and profit optimization"
license = "MIT"
repository = "https://github.com/emiliancristea/bunker-miner"
keywords = ["mining", "cryptocurrency", "gpu", "daemon"]
categories = ["network-programming"]

[features]
proxy = []

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }

# gRPC server implementation
tonic = "0.10"
tonic-build = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Configuration encryption and security
age = "0.10"
secrecy = "0.8"
rpassword = "7.0"

# Command line interface
clap = { version = "4.0", features = ["derive"] }

# Hardware interaction
nvml-wrapper = "0.9"
sysinfo = "0.29"

# File system operations
dirs = "5.0"
fs_extra = "1.3"

# Process management
which = "4.4"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Regex for output parsing
regex = "1.10"

# HTTP client for API calls
reqwest = { version = "0.11", features = ["json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async traits
async-trait = "0.1"

# Streaming
tokio-stream = "0.1"

# Web server for dashboard (Phase 2.4)
axum = { version = "0.6", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["fs", "cors"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"

# Protocol buffers and gRPC
prost = "0.12"
prost-types = "0.12"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
protoc-bin-vendored = "3"
tonic-build = "0.10"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
tempfile = "3.0"

[[bin]]
name = "bunker-miner-daemon"
path = "src/main.rs"
