[package]
name = "bunker-fleet-controller"
version = "0.1.0"
edition = "2021"
authors = ["Emilian Cristea <emilian@bunkercorpo.com>"]
description = "BUNKER MINER Fleet Management Controller - Web Dashboard & API"
repository = "https://github.com/emiliancristea/bunker-miner"
license = "MIT"

[dependencies]
# Core async runtime and web framework
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["ws", "multipart", "macros"] }
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace", "auth"] }
hyper = { version = "1.0", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Serialization and JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Authentication and security
jsonwebtoken = "9.0"
argon2 = "0.5"
ring = "0.17"
hex = "0.4"

# WebSocket
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# HTTP client for external APIs
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
once_cell = "1.19"
dashmap = "5.5"
bytes = "1.5"

# Redis for session and connection state management
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

[dev-dependencies]
tokio-test = "0.4"