[package]
name = "bunker-pool"
version = "0.1.0"
edition = "2021"
authors = ["Emilian Cristea <emilian@bunkercorpo.com>"]
description = "BUNKER POOL - High-performance cryptocurrency mining pool server"
license = "MIT"
repository = "https://github.com/emiliancristea/bunker-miner"
keywords = ["mining", "pool", "stratum", "cryptocurrency"]
categories = ["network-programming"]

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Redis client
redis = { version = "0.24", features = ["tokio-comp"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.13"

# Cryptography
sha2 = "0.10"
hex = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"

[[bin]]
name = "bunker-pool"
path = "src/main.rs"