[package]
name = "bunker-pool"
version = "0.1.0"
edition = "2021"
authors = ["Emilian Cristea <emilian@bunkercorpo.com>"]
description = "BUNKER POOL - High-performance cryptocurrency mining pool server"
license = "MIT"
repository = "https://github.com/emiliancristea/bunker-miner"
keywords = ["mining", "pool", "stratum", "cryptocurrency"]
categories = ["network-programming"]

[dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Web framework for dashboard
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Redis client with cluster support
redis = { version = "0.24", features = ["tokio-comp", "cluster", "json"] }

# Serialization and JSON-RPC
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for coin daemon RPC
reqwest = { version = "0.11", features = ["json"] }

# Configuration
config = "0.14"
clap = { version = "4.4", features = ["derive"] }

# Cryptography for multi-algorithm support
sha2 = "0.10"
blake2 = "0.10"
k12 = "0.3"
hex = "0.4"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Network utilities
ipnet = "2.9"

# Prometheus metrics
prometheus = "0.13"

# Message queuing (for share forwarding) - disabled for now
# nats = "0.25"

# Configuration parsing
toml = "0.8"

# CPU core detection
num_cpus = "1.16"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"

[[bin]]
name = "bunker-pool"
path = "src/main.rs"

[[bin]]
name = "load-test"
path = "tests/load_test.rs"