[package]
name = "bunker-common"
version = "0.1.0"
edition = "2021"
authors = ["Emilian Cristea <emilian@bunkercorpo.com>"]
description = "BUNKER MINER - Common types and utilities shared across components"
license = "MIT"
repository = "https://github.com/emiliancristea/bunker-miner"
keywords = ["mining", "shared", "types"]
categories = ["data-structures"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }

# Error handling
thiserror = "1.0"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
serde_json = "1.0"
tokio-test = "0.4"
