[package]
name = "bunker-miner-cli"
version = "0.1.0"
edition = "2021"
authors = ["Emilian Cristea <emilian@bunkercorpo.com>"]
description = "BUNKER MINER CLI - Command-line interface for the BUNKER MINER daemon"
license = "MIT"
repository = "https://github.com/emiliancristea/bunker-miner"
keywords = ["mining", "cryptocurrency", "cli", "grpc"]
categories = ["command-line-utilities"]

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }

# gRPC client implementation
tonic = "0.10"
prost = "0.12"
prost-types = "0.12"

# Command line interface
clap = { version = "4.0", features = ["derive"] }

# Serialization for pretty output
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Streaming support
tokio-stream = "0.1"

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
protoc-bin-vendored = "3"
tonic-build = "0.10"

[[bin]]
name = "bunker-miner-cli"
path = "src/main.rs"
