[package]
name = "bunker-poc"
version = "0.1.0"
edition = "2021"
authors = ["Emilian Cristea <emilian@bunkercorpo.com>"]
description = "BUNKER MINER - Proof-of-Concept implementations for technology validation"

[[bin]]
name = "hardware-detection"
path = "src/hardware_detection.rs"

[[bin]]
name = "process-management"
path = "src/process_management.rs"

[[bin]]
name = "grpc-server"
path = "src/grpc_server.rs"

[lib]
name = "bunker_poc"
path = "src/lib.rs"

[[bin]]
name = "stratum-server"
path = "src/stratum_server.rs"

[[bin]]
name = "secure-storage"
path = "src/secure_storage.rs"

[dependencies]
# Hardware detection
nvml-wrapper = "0.9"
sysinfo = "0.29"

# Process management
tokio = { version = "1.0", features = ["full"] }
regex = "1.10"

# gRPC
tonic = "0.10"
tonic-build = "0.10"
prost = "0.12"

# Secure storage
age = "0.10"
secrecy = "0.8"

# Networking
tokio-stream = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
protoc-bin-vendored = "3"
tonic-build = "0.10"
