[package]
name = "coin-daemon-stub"
version = "0.1.0"
edition = "2021"
authors = ["Emilian Cristea <emilian@bunkercorpo.com>"]
description = "BUNKER MINER - Coin Daemon Smart Stub for Development"

[[bin]]
name = "coin-daemon-stub"
path = "src/main.rs"

[dependencies]
# HTTP server for JSON-RPC
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Command line interface
clap = { version = "4.0", features = ["derive"] }

# Random number generation for block templates
rand = "0.8"

# Crypto utilities for hash generation
sha2 = "0.10"
hex = "0.4"