[package]
name = "pool-api-stub"
version = "0.1.0"
edition = "2021"
authors = ["Emilian Cristea <emilian@bunkercorpo.com>"]
description = "BUNKER MINER - Pool API Smart Stub for Development"

[[bin]]
name = "pool-api-stub"
path = "src/main.rs"

[dependencies]
# HTTP server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Command line interface
clap = { version = "4.0", features = ["derive"] }

# Health checking
sysinfo = "0.29"